fix(home): Missing spacing between the heading and the paragraph

--- a/src/_sass/pages/_home.scss
+++ b/src/_sass/pages/_home.scss
@@ -1,4 +1,8 @@
 .home {
+  &__heading {
+    margin-bottom: 10px;  
+  }
+
   &__body {
     & > * + * {
       margin-top: 30px;
